src/test/compile-fail/view-items-at-top.rs
// xfail-test

use std;

fn f() {
}

import std::net;    //~ ERROR view items must be declared at the top

fn main() {
}

